# rag-engine

./: .gitignore  CMakeLists.cpu.txt  CMakeLists.simple.txt  CMakeLists.txt  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.gpu  Dockerfile.pip  Dockerfile.simple  README.md  docker-compose.yml  vcpkg.json
config/: default_config.pb.txt
data/: .gitkeep
include/api/: http_server.h
include/common/: config.h  cuda_utils.h  types.h
include/embedding/: cpu_embedding.h  embedding_service.h  onnx_runtime.h
include/observability/: metrics.h  tracing.h
include/pipeline/: query_batcher.h  rag_pipeline.h
include/search/: faiss_index.h  vector_store.h
models/: .gitkeep
proto/: config.proto  rag_service.proto
scripts/: benchmark-cpp.sh  benchmark.py  benchmark_batching.py  build-cpu.sh  build.sh  generate_embeddings.py  rag-engine-colab.ipynb  rag-engine-cpp-colab.ipynb
src/: main.cpp
src/api/: http_server.cpp
src/common/: config.cpp  cuda_utils.cpp  types.cpp
src/embedding/: cpu_embedding.cpp  onnx_runtime.cpp
src/observability/: metrics.cpp  tracing.cpp
src/pipeline/: query_batcher.cpp  rag_pipeline.cpp  result_merger.cpp
src/search/: faiss_index.cpp
tests/: CMakeLists.txt  test_embedding_service.cpp  test_faiss_index.cpp  test_pipeline_integration.cpp  test_query_batcher.cpp
